# teef

./: .gitignore  Makefile  README.md  about.md  contact.md  index.html  keybase.txt  make-post.sh  projects.md  site.hs  stack.yaml  teef.cabal
code/: FreeMonad.hs
css/: default.css  new.css
images/: haskell-logo.pxm
posts/: 2012-01-01-why-poor.md  2012-02-01-emacs-w3m.md  2012-03-01-find-module-xmonad-volume.md  2012-04-02-syntax-highlighting-jekyll.md  2012-05-01-nodejs-requests-conns-ending-closing.md  2012-06-01-arrow-keys-iterm-mac-osx.md  2012-07-01-fsevent-fatal-error-stdio.md  2013-02-14-february-book-log.md  2013-02-17-drip-clojure-scripts.md  2013-02-18-shebang-lein-exec-scripts-dependencies.md  2014-03-24-monads-bind-join-actions.md  2014-03-25-when-nested-io-actions-are-wanted.md  2014-04-05-grokking-sums-and-constructors.md  2014-04-11-aeson-and-user-created-types.md  2014-04-11-refactoring-boilerplate-from-maybe.md  2014-04-17-parsing-nondeterministic-data-with-aeson-and-sum-types.md  2014-04-29-meditations-on-learning-haskell.md  2014-07-30-aeson-with-uncertainty.md  2014-07-31-aeson-with-uncertainty-revised.md  2014-08-22-url-shortener-in-haskell.md  2014-10-02-parsing-and-rendering-templates-in-haskell.md  2014-11-18-how-i-start-haskell.md  2014-11-18-strong-types-and-testing.md  2014-11-19-update-map-in-haskell.md  2014-11-22-literate-url-shortener.lhs  2014-11-22-literate-url-shortener.md  2014-12-03-why-are-types-useful.md  2014-12-31-functional-education.md  2015-04-26-installing-a-haskell-game.md  2015-10-19-either-is-not-arbitrary.md  (+13 more)
(+3 files in other folders)
