name:                teef
version:             0.1.0.0
synopsis:            My home site
homepage:            http://bitemyapp.com/
license:             MIT
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable teef
  main-is: site.hs
  build-depends:       base >=4.6 && <4.7,
                       hakyll,
                       resourcet==1.1.0.1
  default-language:    Haskell2010
